# JSON-path

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  build.py  json_path.py  jsonpath.py  mypy.ini  pyproject.toml
samples/: long.json  short.json
